--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>User Interface II</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="normalize.css">
+  <!-- <link rel="stylesheet" href="reset.css"> -->
 </head>
 
 <body>
@@ -26,7 +28,7 @@
           blanditiis qui eum magni unde, veritatis quas neque possimus tempora est mollitia ex. Voluptatibus quo
           inventore
           itaque.</p>
-        <button>Book A Flight</button>
+        <a class="button" href="#">Book A Flight</a>
       </section>
       <section class="bottom-content">
         <h2>Plan Your Flight</h2>
@@ -48,9 +50,9 @@
   </div>
 
 
-  <!-- <div class="box">
+  <div class="box">
   Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor
   </div>
-   -->
+  
 
 </body>
