--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <head>
   <title>User Interface II</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="normalize.css">
-  <!-- <link rel="stylesheet" href="reset.css"> -->
 </head>
 
 <body>
@@ -28,7 +26,7 @@
           blanditiis qui eum magni unde, veritatis quas neque possimus tempora est mollitia ex. Voluptatibus quo
           inventore
           itaque.</p>
-        <a class="button" href="#">Book A Flight</a>
+        <button>Book A Flight</button>
       </section>
       <section class="bottom-content">
         <h2>Plan Your Flight</h2>
@@ -50,9 +48,9 @@
   </div>
 
 
-  <div class="box">
+  <!-- <div class="box">
   Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor
-  </div>
+  </div> -->
   
 
 </body>
