--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <title>User Interface II</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
@@ -47,10 +47,14 @@
     </footer>
   </div>
 
-
-  <!-- <div class="box">
+  <div class="box-container">
+  <div class="box">
   Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor
-  </div> -->
+  </div>
+  <div class="box">
+  Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor
+  </div>
+  </div>
   
 
 </body>
